Checkpoint 1.0.6 - repaiered bug with nowrapping words in paragraph

--- a/src/app/core/modal/navigation-templates/navigation-templates/navigation-templates.component.css
+++ b/src/app/core/modal/navigation-templates/navigation-templates/navigation-templates.component.css
@@ -6,7 +6,6 @@
   align-items: center;
 }
 
-
 .precisely-theme:hover {
   background-color: #b19cd9;
   border-left: #7f00ff solid 5px;
@@ -33,8 +32,10 @@
   font-weight: normal;
 }
 
-.font-size-9{
+.font-size-9 {
   font-size: 9px;
 }
 
-
+.wrap-lines{
+  word-break: break-all;
+}
